--- a/app/src/main/res/layout/pph_activity_transaction_selection.xml
+++ b/app/src/main/res/layout/pph_activity_transaction_selection.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.transactionSelection.TransactionSelection">
+    tools:context=".PPH.activities.transactionSelection.PPHTransactionSelection">
 
     <LinearLayout
         android:layout_width="match_parent"
