--- a/app/src/main/res/layout/fragment_sales_process_checkout.xml
+++ b/app/src/main/res/layout/fragment_sales_process_checkout.xml
@@ -32,6 +32,12 @@ android:orientation="vertical">
             android:layout_height="wrap_content"
             android:onClick="onPrintReceipt"
             android:text="@string/checkout_print_receipt" />
+        <Button
+            android:id="@+id/btnPay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="onPay"
+            android:text="@string/checkout_pay" />
     </LinearLayout>
 </ScrollView>
 </LinearLayout>
