--- a/app/src/main/res/layout/pph_login_activity.xml
+++ b/app/src/main/res/layout/pph_login_activity.xml
@@ -14,56 +14,53 @@
 
 
         <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:gravity="center"
-        >
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/sdk_black"
-            android:text="@string/initial_setup"
-            android:textSize="16sp"
-            android:layout_gravity="center"
-
-            />
-    </androidx.appcompat.widget.Toolbar>
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/sdk_black"
+                android:text="@string/initial_setup"
+                android:textSize="16sp"
+                android:layout_gravity="center"/>
+        </androidx.appcompat.widget.Toolbar>
 
         <RadioGroup
-        android:id="@+id/radioGroup1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"
-
-        android:orientation="horizontal" >
-
-        <RadioButton
-            android:id="@+id/radioSandbox"
+            android:id="@+id/radioGroup1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/pph_rbtn_selector_left"
-            android:button="@null"
-            android:checked="true"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="Sandbox"
-            android:textColor="@drawable/pph_rbtn_textcolor_selector" />
+            android:layout_margin="16dp"
+            android:layout_gravity="center"
 
-        <RadioButton
-            android:id="@+id/radioLive"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/pph_rbtn_selector_right"
-            android:button="@null"
-            android:gravity="center"
-            android:padding="5dp"
-            android:text="Live"
-            android:textColor="@drawable/pph_rbtn_textcolor_selector" />
-    </RadioGroup>
+            android:orientation="horizontal" >
+
+            <RadioButton
+                android:id="@+id/radioSandbox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/pph_rbtn_selector_left"
+                android:button="@null"
+                android:checked="true"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Sandbox"
+                android:textColor="@drawable/pph_rbtn_textcolor_selector" />
+
+            <RadioButton
+                android:id="@+id/radioLive"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/pph_rbtn_selector_right"
+                android:button="@null"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="Live"
+                android:textColor="@drawable/pph_rbtn_textcolor_selector" />
+        </RadioGroup>
 
         <!-- Steps container -->
         <ScrollView
@@ -143,35 +140,35 @@
                 android:textColor="@color/sdk_primary_dark_blue"
                 />
         </RelativeLayout>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_16"
+            android:background="@drawable/pph_blue_btn_selector"
+            android:onClick="onTestPrinter"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/test_printer_button"
+            android:visibility="gone"
+            android:text="@string/test_printer"
+            android:textAllCaps="false"
+            android:textColor="@color/sdk_white"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_16"
+            android:background="@drawable/pph_blue_btn_selector"
+            android:onClick="onConnectCardReaderClicked"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/connect_reader_button"
+            android:visibility="gone"
+            android:text="@string/connect_card_reader"
+            android:textAllCaps="false"
+            android:textColor="@color/sdk_white"
+            />
+
    </LinearLayout>
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_32"
-        android:background="@drawable/pph_blue_btn_selector"
-        android:onClick="onTestPrinter"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/test_printer_button"
-        android:visibility="gone"
-        android:text="@string/test_printer"
-        android:textAllCaps="false"
-        android:textColor="@color/sdk_white"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_32"
-        android:background="@drawable/pph_blue_btn_selector"
-        android:onClick="onConnectCardReaderClicked"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/connect_reader_button"
-        android:visibility="gone"
-        android:text="@string/connect_card_reader"
-        android:textAllCaps="false"
-        android:textColor="@color/sdk_white"
-        />
-
 
     <WebView
 
