--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -123,6 +123,7 @@
     <dimen name="blue_btn_radius">32dp</dimen>
     <dimen name="dp_32">32dp</dimen>
     <dimen name="dp_16">16dp</dimen>
+    <dimen name="dp_8">8dp</dimen>
 
     <dimen name="weighted">0dp</dimen>
 </resources>
