Added bar code support- first iteration. Still need to check against if product doesn't exist with the barcode, when adding it to the order and also need to explore BlueTooth bar code scanner option. Also removed the check for printer and card reader connectivity before starting sales because PPH card reader has been obsoleted and can't be authorized anymore- need to integrate IZettle reader.

--- a/app/src/main/res/layout/activity_data_admin.xml
+++ b/app/src/main/res/layout/activity_data_admin.xml
@@ -36,6 +36,15 @@ tools:context=".AdminActivity">
                 android:importantForAutofill="no"
                 android:inputType="text" />
 
+            <EditText
+                android:id="@+id/txtBarCode"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:hint="@string/enter_bar_code"
+                android:importantForAutofill="no"
+                android:inputType="text" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
